--- a/app/auth/templates/signin.html
+++ b/app/auth/templates/signin.html
@@ -1,20 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head><title>Sign In</title>
+{% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}
+Login
+{% endblock %}
+
+{% block styles %}
+{{super()}}
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap-theme.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/register.css') }}">
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
 
 <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="POST" action="/login">
         <h2 class="form-signin-heading">Sign In</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail_1" class="form-control" placeholder="Email address" required>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword_1" class="form-control" placeholder="Password" required>
+          {{ form.hidden_tag() }}
+          {{ wtf.form_field(form.username) }}
+          {{ wtf.form_field(form.password) }}
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
@@ -22,14 +28,12 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <div>
-          <h3>Don't have an account?<a href="{{ url_for('auth_blueprint.login') }}">Sign Up</a></h3>
+          <h3>Don't have an account?<a href="">Sign Up</a></h3>
         </div>
       </form>
 
     </div> <!-- /container -->
-
+{% endblock %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="{{ url_for('.static', filename='js/bootstrap.min.js') }}"></script>
-</body>
-</html>
