--- a/app/auth/templates/signin.html
+++ b/app/auth/templates/signin.html
@@ -28,7 +28,7 @@ Login
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <div>
-          <h3>Don't have an account?<a href="">Sign Up</a></h3>
+          <h3>Don't have an account?<a href="{{ url_for('auth_blueprint.register') }}">Sign Up</a></h3>
         </div>
       </form>
 
