--- a/app/auth/templates/registration.html
+++ b/app/auth/templates/registration.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Register
+Login
 {% endblock %}
 
 {% block styles %}
@@ -10,43 +10,31 @@ Register
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap-theme.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/register.css') }}">
-<link rel="stylesheet" href="{{ url_for('.static', filename='css/main.css') }}">
-
 {% endblock %}
 
-
 {% block content %}
-<h2>Sign up</h2>
- 
-  {% for message in form.username.errors %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-      
-  {% for message in form.email.errors %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-   
-  {% for message in form.password.errors %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-   
-  <form action="{{ url_for('auth_blueprint.register') }}" method=post>
-    {{ form.hidden_tag() }}
-     
-    {{ form.username.label }}
-    {{ form.username }}<br>
-          
-    {{ form.email.label }}
-    {{ form.email }}<br>
-     
-    {{ form.password.label }}
-    {{ form.password }}<br>
-    
-    {{ form.confirm.label }}
-    {{ form.confirm }}<br>
-     
-    {{ form.submit }}
-  </form>
+
+<div class="container">
+
+      <form class="form-signin" method="POST" action="{{ url_for('auth_blueprint.register') }}">
+        <h2 class="form-signin-heading">Sign In</h2>
+          {{ form.hidden_tag() }}
+          {{ wtf.form_field(form.username) }}
+          {{ wtf.form_field(form.email) }}
+          {{ wtf.form_field(form.password) }}
+          {{ wtf.form_field(form.confirm) }}
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="submit">Sign Up</button>
+        <div>
+          <h3>Already have an account?<a href="{{ url_for('auth_blueprint.login') }}">Sign In</a></h3>
+        </div>
+      </form>
+
+    </div> <!-- /container -->
 {% endblock %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
