--- a/app/auth/templates/signin.html
+++ b/app/auth/templates/signin.html
@@ -16,7 +16,7 @@ Login
 
 <div class="container">
 
-      <form class="form-signin" method="POST" action="/login">
+      <form class="form-signin" method="POST" action="{{ url_for('auth_blueprint.login') }}">
         <h2 class="form-signin-heading">Sign In</h2>
           {{ form.hidden_tag() }}
           {{ wtf.form_field(form.username) }}
@@ -26,7 +26,7 @@ Login
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="submit">Sign in</button>
         <div>
           <h3>Don't have an account?<a href="{{ url_for('auth_blueprint.register') }}">Sign Up</a></h3>
         </div>
