--- a/app/auth/templates/registration.html
+++ b/app/auth/templates/registration.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Login
+Register
 {% endblock %}
 
 {% block styles %}
@@ -17,17 +17,13 @@ Login
 <div class="container">
 
       <form class="form-signin" method="POST" action="{{ url_for('auth_blueprint.register') }}">
-        <h2 class="form-signin-heading">Sign In</h2>
+        <h2 class="form-signin-heading">Create Account</h2>
           {{ form.hidden_tag() }}
           {{ wtf.form_field(form.username) }}
           {{ wtf.form_field(form.email) }}
           {{ wtf.form_field(form.password) }}
           {{ wtf.form_field(form.confirm) }}
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
+ 
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="submit">Sign Up</button>
         <div>
           <h3>Already have an account?<a href="{{ url_for('auth_blueprint.login') }}">Sign In</a></h3>
