--- a/app/auth/templates/edit_profile.html
+++ b/app/auth/templates/edit_profile.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% import "bootstrap/wtf.html" as wtf %}
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="#">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -56,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/userprofile/{{username}}">
+                    <a href="/userprofile/{{current_user.username}}">
                         <i class="pe-7s-user"></i>
                         <p>User Profile</p>
                     </a>
@@ -72,7 +73,7 @@
     </div>
 
     <div class="main-panel">
-        <nav class="navbar navbar-default navbar-fixed">
+		<nav class="navbar navbar-default navbar-fixed">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
@@ -81,7 +82,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Dashboard</a>
+                    <a class="navbar-brand" href="#">User Profile</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -101,6 +102,7 @@
                                 <p>Log out</p>
                             </a>
                         </li>
+						<li class="separator hidden-lg hidden-md"></li>
                     </ul>
                 </div>
             </div>
@@ -110,8 +112,76 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
+                    <div class="col-md-8">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Edit Profile</h4>
+                            </div>
+                            <form action="" method="POST" name="edit">
+                            {{form.hidden_tag()}}
+                            <div class="content">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.first_name)}}
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.last_name)}}
+                                            </div>
+                                        </div>
+                                    </div>
 
-                    <div class="col-md-3">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.birth_date)}}
+                                                </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.address)}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.city)}}
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.country)}}
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.contact_num)}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.description)}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
+                                    <div class="clearfix"></div>
+                            </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="card card-user">
                             <div class="image">
                             </div>
@@ -120,70 +190,21 @@
                                      <a href="#">
                                     <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
 
-                                      <h4 class="title">{{username}}<br />
+                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
+                                         <small>{{current_user.username}}</small>
                                       </h4>
                                     </a>
                                 </div>
-                                <div style="text-align:center">
-                                    <a href="/userprofile/{{username}}">View profile</a>
-                                </div>
+                                <p class="description text-center"></p>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Welcome to TravelPlanner, {{username}}</h4>
-                            </div>
-                            <div class="content">
-                                <div class="table-full-width">
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <td>
-                                                <a href="/userprofile/edit/{{username}}" style="text-align:center">Complete Your Profile</a>
-                                                <p>Complete your profile and write a short bio about yourself.</p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                <a href="#">Learn how to create a trip.</a>
-                                                <p>Get ready to search for the perfect place and prepare for a memorable trip.</p>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Trips</h4>
-                            </div>
-                            <div class="content">
-                                <div class="table-full-width">
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <td>No upcoming trips.</td>
-                                                <td class="td-actions text-right">
-                                                    <a href = "#">Create new trip</a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+                            <hr>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        </footer>
+
     </div>
 </div>
 
