Update on editing profile

--- a/app/auth/templates/edit_profile.html
+++ b/app/auth/templates/edit_profile.html
@@ -191,7 +191,8 @@
                                     <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
 
                                       <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
-                                         <small>{{current_user.username}}</small>
+                                         <small>{{current_user.username}}</small><br><br>
+                                         <small>"{{current_user.description}}"</small>
                                       </h4>
                                     </a>
                                 </div>
