--- a/app/auth/templates/dashboard.html
+++ b/app/auth/templates/dashboard.html
@@ -56,7 +56,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="user.html">
+                    <a href="/userprofile/{{current_user.username}}">
                         <i class="pe-7s-user"></i>
                         <p>User Profile</p>
                     </a>
