Home page added with no features yet, updated views.py and minimal changes on some templates

--- a/app/auth/templates/users/dashboard.html
+++ b/app/auth/templates/users/dashboard.html
@@ -191,13 +191,13 @@
 </body>
 
     <!--   Core JS Files   -->
-    <link rel="stylesheet" type="text/javascript" href="{{ url_for('.static', filename='js/jquery-1.10.2.js') }}">
-    <link rel="stylesheet" type="text/javascript" href="{{ url_for('.static', filename='js/bootstrap.min.js') }}">
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery-1.10.2.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/bootstrap.min.js') }}"></script>
 
 	<!--  Checkbox, Radio & Switch Plugins -->
-    <link rel="stylesheet" href="{{ url_for('.static', filename='js/bootstrap-checkbox-radio-switch.js') }}">
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/bootstrap-checkbox-radio-switch.js') }}"></script>
 
     <!--  Google Maps Plugin    -->
-    <link rel="stylesheet" type="text/javascript" href="https://maps.googleapis.com/maps/api/js?sensor=false">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
 </html>
