--- a/app/auth/templates/index.html
+++ b/app/auth/templates/index.html
@@ -64,7 +64,7 @@
                 </ul>
                 <div align="right" style="text-align:right">
                         <a href="/register">Sign Up  |</a>
-                        <a href="/logout">Log In</a>
+                        <a href="/login">Log In</a>
                 </div>
             </div>
             <!-- /.navbar-collapse -->
