--- a/app/auth/templates/users/dashboard.html
+++ b/app/auth/templates/users/dashboard.html
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="trips.html">
+                    <a href="/new-trip">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
@@ -172,7 +172,7 @@
                                             <tr>
                                                 <td>No upcoming trips.</td>
                                                 <td class="td-actions text-right">
-                                                    <a href = "#">Create new trip</a>
+                                                    <a href = "/new-trip">Create new trip</a>
                                                 </td>
                                             </tr>
                                         </tbody>
