--- a/app/auth/templates/users/userprofile.html
+++ b/app/auth/templates/users/userprofile.html
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="trips.html">
+                    <a href="/new-trip">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
@@ -179,7 +179,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="clearfix"></div>
                                 </form>
                             </div>
