--- a/app/auth/templates/users/trip.html
+++ b/app/auth/templates/users/trip.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    {% import "bootstrap/wtf.html" as wtf %}
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="#">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -73,7 +72,7 @@
     </div>
 
     <div class="main-panel">
-		<nav class="navbar navbar-default navbar-fixed">
+        <nav class="navbar navbar-default navbar-fixed">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
@@ -82,7 +81,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">User Profile</a>
+                    <a class="navbar-brand" href="#">Trips</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -102,7 +101,6 @@
                                 <p>Log out</p>
                             </a>
                         </li>
-						<li class="separator hidden-lg hidden-md"></li>
                     </ul>
                 </div>
             </div>
@@ -112,75 +110,8 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-8">
-                        <div class="card">
-                            <div class="header">
-                                <h4 class="title">Edit Profile</h4>
-                            </div>
-                            <form action="" method="POST" name="edit">
-                            {{form.hidden_tag()}}
-                            <div class="content">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.first_name)}}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.last_name)}}
-                                            </div>
-                                        </div>
-                                    </div>
 
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                                <div class="form-group">
-                                                    {{wtf.form_field(form.birth_date)}}
-                                                </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.address)}}
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.city)}}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.country)}}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.contact_num)}}
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                {{wtf.form_field(form.description)}}
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
-                                    <div class="clearfix"></div>
-                            </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="card card-user">
                             <div class="image">
                             </div>
@@ -189,22 +120,63 @@
                                      <a href="#">
                                     <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
 
-                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
-                                         <small>{{current_user.username}}</small><br><br>
-                                         <small>"{{current_user.description}}"</small>
+                                      <h4 class="title">{{current_user.username}}<br />
                                       </h4>
                                     </a>
                                 </div>
-                                <p class="description text-center"></p>
+                                <div style="text-align:center">
+                                    <a href="/userprofile/{{current_user.username}}">View profile</a>
+                                </div>
                             </div>
-                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card ">
+                              <form action="/add_plan" method="POST">
+                              <div class="content">
+                                  <div class="row">
+                                      <div class="col-md-6">
+                                          <div class="form-group">
+                                          <label>Destination:</label> <input type="text" class="form-control" name="destination">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-6">
+                                          <div class="form-group">
+                                              <label>Trip Description:</label> <input type="text" class="form-control" name="trip_description">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-6">
+                                          <div class="form-group">
+                                              <label>Start Date:</label> <input type="date" class="form-control" name="start_date">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-6">
+                                          <div class="form-group">
+                                              <label>End Date:</label> <input type="date" class="form-control" name="end_date">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-md-3">
+                                          <div class="form-group">
+                                              <button type="submit" name="add" class="btn btn-info btn-fill pull-right">Add</button>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                              </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </footer>
-
     </div>
 </div>
 
@@ -215,7 +187,7 @@
     <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery-1.10.2.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('.static', filename='js/bootstrap.min.js') }}"></script>
 
-    <!--  Checkbox, Radio & Switch Plugins -->
+	<!--  Checkbox, Radio & Switch Plugins -->
     <script type="text/javascript" src="{{ url_for('.static', filename='js/bootstrap-checkbox-radio-switch.js') }}"></script>
 
     <!--  Google Maps Plugin    -->
