Table connections for friends

--- a/app/auth/templates/users/trip.html
+++ b/app/auth/templates/users/trip.html
@@ -145,21 +145,21 @@
                                   <div class="row">
                                       <div class="col-md-6">
                                           <div class="form-group">
-                                              <label>Trip Description:</label> <input type="text" class="form-control" name="trip_description">
+                                              <label>Trip Description:</label> <input type="text" class="form-control" name="tripName">
                                           </div>
                                       </div>
                                   </div>
                                   <div class="row">
                                       <div class="col-md-6">
                                           <div class="form-group">
-                                              <label>Start Date:</label> <input type="date" class="form-control" name="start_date">
+                                              <label>Start Date:</label> <input type="date" class="form-control" name="tripDateFrom">
                                           </div>
                                       </div>
                                   </div>
                                   <div class="row">
                                       <div class="col-md-6">
                                           <div class="form-group">
-                                              <label>End Date:</label> <input type="date" class="form-control" name="end_date">
+                                              <label>End Date:</label> <input type="date" class="form-control" name="tripDateTo">
                                           </div>
                                       </div>
                                   </div>
