Html files for friends

--- a/app/auth/templates/users/dashboard.html
+++ b/app/auth/templates/users/dashboard.html
@@ -67,6 +67,12 @@
                         <p>Trips</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/friends">
+                        <i class="pe-7s-male"></i>
+                        <p>Friends</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
