--- a/app/auth/templates/users/edit_profile.html
+++ b/app/auth/templates/users/edit_profile.html
@@ -44,7 +44,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text">
+                <a class="simple-text" href="/">
                     TravelPlanner
                 </a>
             </div>
