add trips feature

--- a/app/trips/templates/trip.html
+++ b/app/trips/templates/trip.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% import "bootstrap/wtf.html" as wtf %}
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="#">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -56,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/userprofile/{{username}}">
+                    <a href="/userprofile/{{current_user.username}}">
                         <i class="pe-7s-user"></i>
                         <p>User Profile</p>
                     </a>
@@ -72,7 +73,7 @@
     </div>
 
     <div class="main-panel">
-        <nav class="navbar navbar-default navbar-fixed">
+		<nav class="navbar navbar-default navbar-fixed">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
@@ -81,7 +82,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Dashboard</a>
+                    <a class="navbar-brand" href="#">User Profile</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -101,6 +102,7 @@
                                 <p>Log out</p>
                             </a>
                         </li>
+						<li class="separator hidden-lg hidden-md"></li>
                     </ul>
                 </div>
             </div>
@@ -110,48 +112,31 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-
-                    <div class="col-md-3">
-                        <div class="card card-user">
-                            <div class="image">
-                            </div>
-                            <div class="content">
-                                <div class="author">
-                                     <a href="#">
-                                    <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
-
-                                      <h4 class="title">{{username}}<br />
-                                      </h4>
-                                    </a>
-                                </div>
-                                <div style="text-align:center">
-                                    <a href="/userprofile/{{username}}">View profile</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="card ">
+                    <div class="col-md-8">
+                        <div class="card">
                             <div class="header">
-                                <h4 class="title">Welcome to TravelPlanner, {{username}}</h4>
+                                <h4 class="title">Your Trips</h4>
+                                <h5><a href="/trips/createtrip" class="button">Add a Trip</a></h5>
                             </div>
                             <div class="content">
-                                <div class="table-full-width">
+                                <div class="table">
                                     <table class="table">
                                         <tbody>
-                                            <tr>
-                                                <td>
-                                                <a href="/userprofile/{{username}}/edit" style="text-align:center">Complete Your Profile</a>
-                                                <p>Complete your profile and write a short bio about yourself.</p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                <a href="#">Learn how to create a trip.</a>
-                                                <p>Get ready to search for the perfect place and prepare for a memorable trip.</p>
-                                                </td>
-                                            </tr>
+                                        <tr>
+                                            {% for trip in trips %}
+                                            <td style="font-size: large">{{trip.tripName}}</td>
+                                            {% endfor %}
+                                        </tr>
+                                        <tr>
+                                            {% for trip in trips %}
+                                            <td style="font-size: large">{{trip.tripDateFrom}}</td>
+                                            {% endfor %}
+                                        </tr>
+                                        <tr>
+                                            {% for trip in trips %}
+                                            <td style="font-size: large">{{trip.tripDateTo}}</td>
+                                            {% endfor %}
+                                        </tr>
                                         </tbody>
                                     </table>
                                 </div>
@@ -159,28 +144,6 @@
                         </div>
                     </div>
 
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Trips</h4>
-                            </div>
-                            <div class="content">
-                                <div class="table-full-width">
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <td>No upcoming trips.</td>
-                                                <td class="td-actions text-right">
-                                                    <a href = "/trips/createtrip">Create new trip</a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
