--- a/app/auth/templates/users/edit_profile.html
+++ b/app/auth/templates/users/edit_profile.html
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="trips.html">
+                    <a href="/trips">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
