--- a/app/trips/templates/addtrip.html
+++ b/app/trips/templates/addtrip.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% import "bootstrap/wtf.html" as wtf %}
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="#">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -9,6 +10,18 @@
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+    $( function() {
+        $( "#datepicker" ).datepicker();
+    });
+    $( function() {
+        $( "#datepicker2" ).datepicker();
+    });
+    </script>
 
 
     <!-- Bootstrap core CSS     -->
@@ -114,75 +127,36 @@
                     <div class="col-md-8">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">User Profile</h4>
-                                <small><a href="/userprofile/{{current_user.username}}/edit" class="button">Edit Profile</a></small>
+                                <h4 class="title">Add Trip</h4>
                             </div>
+                            <form action="" method="POST" name="edit">
+                            {{form.hidden_tag()}}
                             <div class="content">
-                                <form>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>First Name</label>
-                                                <input type="text" class="form-control" value="{{current_user.first_name}}" readonly>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label>Last Name</label>
-                                                <input type="text" class="form-control" value="{{current_user.last_name}}" readonly>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Email address</label>
-                                                <input type="text" class="form-control" value="{{current_user.email}}" readonly>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Birth Date</label>
-                                                <input type="date" class="form-control" value="{{current_user.birth_date}}" readonly>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label>Address</label>
-                                                <input type="text" class="form-control" value="{{current_user.address}}" readonly>
+                                                {{wtf.form_field(form.trip_name)}}
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="row">
                                         <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>City</label>
-                                                <input type="text" class="form-control" value="{{current_user.city}}" readonly>
-                                            </div>
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.trip_date_from, id="datepicker")}}
+                                                </div>
                                         </div>
                                         <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Country</label>
-                                                <input type="text" class="form-control" value="{{current_user.country}}" readonly>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Contact Number</label>
-                                                <input type="number" class="form-control" value="{{current_user.contact_num}}" readonly>
-                                            </div>
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.trip_date_to, id="datepicker2")}}
+                                                </div>
                                         </div>
                                     </div>
 
+                                    <button type="submit" class="btn btn-info btn-fill pull-right">Add</button>
                                     <div class="clearfix"></div>
-                                </form>
                             </div>
+                            </form>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -194,7 +168,7 @@
                                      <a href="#">
                                     <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
 
-                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br/>
+                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
                                          <small>{{current_user.username}}</small><br><br>
                                          <small>"{{current_user.description}}"</small>
                                       </h4>
@@ -208,8 +182,6 @@
                 </div>
             </div>
         </div>
-        </footer>
-
     </div>
 </div>
 
