--- a/app/auth/templates/users/signin.html
+++ b/app/auth/templates/users/signin.html
@@ -10,9 +10,38 @@ Login
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap-theme.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/register.css') }}">
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/simple-line-icons.css') }}">
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/font-awesome.min.css') }}">
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/pace.css') }}">
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/landing-style.css') }}">
 {% endblock %}
 
 {% block content %}
+
+<nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">TravelPlanner</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav  smooth-scroll navbar-right">
+                        <li><a href="/#intro">Intro</a></li>
+                        <li><a href="/#features">Features</a></li>
+                        <li><a href="/#pricing">Trip Plans</a></li>
+                        <li><a href="/#team">Team</a></li>
+                        <li><a href="/#contact">About</a></li>
+                        <li class="nav-button"><a href="#">Sign In</a></li>
+                        <li class="nav-button"><a href="/register">Sign Up</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div><!--/.container-fluid -->
+        </nav><br><br><br>
 
 <div class="container">
 
@@ -26,7 +55,7 @@ Login
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" name="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="submit" >Sign in</button>
         <div>
           <h3>Don't have an account?<a href="{{ url_for('auth_blueprint.register') }}">Sign Up</a></h3>
         </div>
