--- a/app/auth/templates/trip-plans.html
+++ b/app/auth/templates/trip-plans.html
@@ -101,15 +101,21 @@
                 <div class="row">
                     <h3>Results for {{ search_label }}</h3>
                     <div>
-                        {% for user in users %}
-                        <div class="col-sm-2 text-center">
+                        {% for trip in trips %}
+                        <div class="col-sm-3 text-center">
                             <div class="container" style="display:inline; width:100%;">
                                 <div class="panel panel-default bootcards-media" style="width:100%;"> 
-                                    <div class="panel-heading" align="left" style="width: 100%;">{{ user.username }}</div>
+                                    <div class="panel-heading" align="left" style="width: 100%;">{{ trip.tripName }}</div>
                                     <div class="panel-body" style="width: 100%; height: 100%;" align="center">
                                     <img style="height: 100%; width: 100%; object-fit:contain;" src="https://i.ytimg.com/vi/QGiJFumHUPo/maxresdefault.jpg"/></div>
-                                    <div class="panel-footer" align="left" style="display: inline-block; width: 100%;">{{ user.email }}
-                                    <a href="/view/{{ user.username }}" target="_blank" class="btn btn-primary">View Trip</a>
+                                    <div class="panel-footer" align="left" style="display: inline-block; width: 100%;">
+                                        <div class="row">
+                                            &nbsp; From: {{ trip.tripDateFrom }} 
+                                            <a href="/view/{{ trip.tripName }}" target="_blank" class="btn btn-primary" style="float: right;">View Trip</a>
+                                        </div>
+                                        <div class="row">
+                                            &nbsp; To: {{ trip.tripDateTo }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
