--- a/app/auth/templates/users/edit_profile.html
+++ b/app/auth/templates/users/edit_profile.html
@@ -63,11 +63,7 @@
                     </a>
                 </li>
                 <li>
-<<<<<<< HEAD
-                    <a href="/trips">
-=======
-                    <a href="/new-trip">
->>>>>>> c467f2f94e551be06f4b31e5175bf8599fa5ccd1
+                    <a href="/trips/">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
