--- a/app/auth/templates/users/friends.html
+++ b/app/auth/templates/users/friends.html
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/new-trip">
+                    <a href="/trips/">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
